some correction the both of projects

--- a/Simple Project/Routine Design/style/style.css
+++ b/Simple Project/Routine Design/style/style.css
@@ -3,10 +3,11 @@
  padding: 0;
  box-sizing: border-box;
 }
+
 table{
- width: 97%;
+ width: 90%;
  margin: 0 auto;
- margin-top: 60px;
+ margin: 10px 0px;
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  text-align: center;
