--- a/Simple Project/Routine Design/style/style.css
+++ b/Simple Project/Routine Design/style/style.css
@@ -3,11 +3,13 @@
  padding: 0;
  box-sizing: border-box;
 }
+body{
+    margin: 30px 0px;
+}
 
 table{
  width: 90%;
  margin: 0 auto;
- margin: 10px 0px;
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  text-align: center;
